--- a/src/components/card-list/card-list.styles.css
+++ b/src/components/card-list/card-list.styles.css
@@ -3,4 +3,9 @@
     flex-direction: column;
     align-items: flex-start;
     margin-top: 20%;
+    width: 45%;
+}
+
+.general-term-list-info {
+    margin: 0 auto 0;
 }
